@@ -1,1 +1,1 @@
-EXTRA_DIST = acx_pthread.m4 ax_check_gl.m4 ax_lang_compiler_ms.m4 gst_element_check_required.m4 intltool_se_plugin.m4
+EXTRA_DIST = acx_ccache.m4 acx_pthread.m4 ax_check_gl.m4 ax_lang_compiler_ms.m4 gst_element_check_required.m4 intltool_se_plugin.m4
