@@ -1,3 +1,10 @@
+2008-11-24  kitone  <kitone@gna.org>
+
+	reviewed by: <delete if not using a buddy>
+
+	* Makefile.am:
+	* acx_ccache.m4:
+
 2008-11-13  kitone  <kitone@gna.org>
 
 	* intltool_se_plugin.m4:
